--- a/src/styles.css
+++ b/src/styles.css
@@ -1,27 +1,30 @@
 body {
-    font-family: arial, sans-serif;
+    font-family: "poppins", sans-serif;
   }
   
   h1 {
-    color: #7c7c7c;
-    font-size: 24px;
-    font-weight: 100;
+    color: #017BFE;
+    font-size: 30px;
+    font-weight: 500;
     line-height: 28px;
     margin: 0;
   }
   
   ul {
-    margin: 0 0 10px;
+    margin: 8px 0 10px;
     padding: 0;
   }
   
   li {
     color: #7c7c7c;
-    font-size: 16px;
-    font-weight: 100;
+    font-size: 14px;
     height: 19px;
     line-height: 1;
     list-style: none;
+  }
+
+  .date {
+    font-weight: 600;
   }
   
   .weather-app {
@@ -32,6 +35,8 @@ body {
     max-width: 600px;
   }
   
+
+
   .weather-icon {
     height: 64px;
     width: 64px;
@@ -41,7 +46,7 @@ body {
   .temperature {
     color: rgb(33, 33, 33);
     font-size: 64px;
-    font-weight: 400;
+    font-weight: 500;
     line-height: 1;
   }
   
@@ -61,3 +66,5 @@ body {
     margin: 0 auto;
     padding: 8px
   }
+
+  
