--- a/src/styles.css
+++ b/src/styles.css
@@ -36,11 +36,12 @@ body {
   }
   
 
-
-  .weather-icon {
-    height: 64px;
-    width: 64px;
+  .large-weather {
+    height: 60px;
+    width: 60px;
     margin-right: 10px;
+    margin-top: 2px;
+    margin-left: 30px;
   }
   
   .temperature {
