--- a/src/styles.css
+++ b/src/styles.css
@@ -32,16 +32,17 @@ body {
     padding: 15px;
     margin: 20px auto;
     border-radius: 10px;
-    max-width: 600px;
+    max-width: 800px;
   }
   
 
   .large-weather {
     height: 60px;
     width: 60px;
-    margin-right: 10px;
-    margin-top: 2px;
-    margin-left: 30px;
+    margin-right: 20px;
+    margin-top: 0px;
+    margin-left: 0px;
+    margin-bottom: 10px
   }
   
   .temperature {
